# naive-pascal-compiler

./: .gitignore  CMakeLists.txt  README.md  parser.make
frontend/: collapse.html  collapse.js  index.html  my.js  out.json  utils.js
src/: abstract_node.cpp  abstract_node.hpp  dummy_node.cpp  dummy_node.hpp  main.cpp  parse.y  program_node.cpp  program_node.hpp  scan.l
src/ast/: abstract_expr_node.hpp  abstract_node.hpp  abstract_subnodes.hpp  codegen_context.cpp  const_expr_node.hpp  const_part_node.hpp  const_value_nodes.hpp  decl_list_nodes.hpp  dummy_node.hpp  expr_nodes.hpp  head_list_nodes.hpp  identifier_node.hpp  name_node.hpp  parameter_nodes.hpp  program_node.hpp  routine_call_nodes.hpp  routine_nodes.hpp  stmt_nodes.hpp  sym_table.hpp  symbol_table.hpp  sys_routine_nodes.hpp  type_nodes.hpp
src/codegen/: codegen_context.hpp  const_value_nodes.cpp  decl_list_nodes.cpp  expr_nodes.cpp  identifier_node.cpp  routine_call_nodes.cpp  routine_nodes.cpp  stmt_nodes.cpp  sys_routine_nodes.cpp  type_nodes.cpp
src/exceptions/: codegen_exception.hpp
src/utils/: ast.hpp  ast_utils.hpp
test/: basic-op.pas  basic.p  basic.pas  control-flow.pas  demo.pas  naive.pas  routine.pas
